[gd_scene load_steps=6 format=3 uid="uid://et4mipt58fbm"]

[ext_resource type="Theme" uid="uid://lycwmhaoguar" path="res://game/themes/tag_theme.tres" id="1_jdwjp"]
[ext_resource type="Script" uid="uid://c5mfejn71i283" path="res://game/scenes/tag_instance.gd" id="2_pebfx"]
[ext_resource type="Texture2D" uid="uid://ddk5m8gk3750e" path="res://game/icons/godot/Close.svg" id="3_a8jhd"]
[ext_resource type="Script" uid="uid://mt5mmsrwui67" path="res://game/scripts/tag.gd" id="3_pebfx"]

[sub_resource type="Resource" id="Resource_pebfx"]
script = ExtResource("3_pebfx")
name = "Something"
status = 0
metadata/_custom_type_script = "uid://mt5mmsrwui67"

[node name="tag_instance" type="PanelContainer" node_paths=PackedStringArray("label_button") groups=["tag_label"]]
custom_minimum_size = Vector2(0, 28)
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("1_jdwjp")
script = ExtResource("2_pebfx")
tag = SubResource("Resource_pebfx")
label_button = NodePath("h_box_container/label_button")

[node name="h_box_container" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 0

[node name="label_button" type="Button" parent="h_box_container"]
layout_mode = 2
focus_mode = 0
theme_override_colors/font_color = Color(1, 1, 1, 0.501961)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 0.501961)
flat = true

[node name="remove_button" type="Button" parent="h_box_container"]
layout_mode = 2
focus_mode = 0
icon = ExtResource("3_a8jhd")
flat = true

[connection signal="pressed" from="h_box_container/label_button" to="." method="_on_label_button_pressed"]
[connection signal="pressed" from="h_box_container/remove_button" to="." method="_on_remove_button_pressed"]
